--- a/hordak/templates/hordak/accounts/account_list.html
+++ b/hordak/templates/hordak/accounts/account_list.html
@@ -7,7 +7,7 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>Name</th>
+                <th>Name1</th>
                 <th>Type</th>
                 <th>Balance</th>
                 <th>Currencies</th>
